# bots

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
deltachat/: Cargo.toml
deltachat/src/: main.rs
discord/: Cargo.toml
discord/src/: main.rs
slack/: Cargo.toml
slack/src/: main.rs  user.rs
telegram/: Cargo.toml
telegram/src/: message.rs
