[package]
name = "yozuk-discord"
version = "0.22.5"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.18", features = ["env"] }
futures = "0.3.24"
lazy-regex = "2.3.0"
mediatype = "0.19.9"
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "http",
] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
yozuk = "0.22.11"
yozuk-sdk = "0.22.11"
yozuk-helper-filetype = "0.22.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yozuk = { version = "0.22.11", features = ["rayon"] }
