[package]
name = "yozuk-slack"
version = "0.22.5"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.143"
serde_derive = "1.0.143"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.11", features = ["json", "stream", "multipart"] }
warp = "0.3.2"
yozuk = "0.22.8"
yozuk-sdk = "0.22.7"
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["env"] }
tempfile = "3.3.0"
mediatype = "0.19.6"
gh-emoji = "1.0.7"
lazy-regex = "2.3.0"
websocket-lite = "0.5.2"
futures = "0.3.23"
serde_json = "1.0.83"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yozuk = { version = "0.22.8", features = ["rayon"] }
